refactor: 중복되는 내용을 메서드로 분리하고 네이밍을 변경한다.
가독성 향상을 위해 코드를 변경한다.